# pyfabricops

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  authentication_guide.md  dmv_spn.py  extract_semantic_model.py  logging_system.md  mkdocs.yml  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
docs/: authentication_guide.md  index.md  requirements.txt
docs/Functions/: Git.md  Items.md  Lakehouses.md  Notebooks.md  Reports.md  Warehouses.md  auth.md  capacities.md  connections.md  core.md  data_pipelines.md  dataflows_gen1.md  dataflows_gen2.md  folders.md  gateways.md  semantic_models.md  workspaces.md
docs/Functions/Auxiliary/: Decorators.md  Exceptions.md  Helpers.md  Utils.md
docs/functions/: core.md  data_pipelines.md  dataflows_gen1.md  dataflows_gen2.md  folders.md  gateways.md  git.md  notebooks.md  reports.md  shortcuts.md  workspaces.md
docs/functions/CI_CD/: support_files.md
docs/functions/api/: api.md  auth.md  scopes.md
docs/functions/auxiliary/: utils.md
docs/functions/cd/: support_files.md
docs/functions/core/: capacities.md  connections.md  deployment_pipelines.md  domains.md  folders.md  gateways.md  git.md  tags.md  workspaces.md
docs/functions/dmv/: dmv.md
docs/functions/graph/: users.md
docs/functions/helpers/: data_pipelines.md  dataflows_gen1.md  dataflows_gen2.md  environments.md  folders.md  items.md  lakehouses.md  notebooks.md  reports.md  semantic_models.md  warehouses.md  workspaces.md
docs/functions/items/: data_pipelines.md  dataflows_gen1.md  dataflows_gen2.md  environments.md  folders.md  items.md  lakehouses.md  notebooks.md  reports.md  semantic_models.md  spark.md  variable_libraries.md  warehouses.md  workspaces.md
docs/functions/orchestration/: workspaces.md
docs/functions/raises_and_logging/: exceptions.md
docs/functions/utills/: decorators.md  exceptions.md  logging.md  utils.md
docs/functions/utils/: schemas.md
docs/raises_and_logging/: logging_system.md
docs/stylesheets/: extra.css
examples/: logging_example.py
scripts/: generate_init.py  install_pyfabricops_dev_mode.py  test_package.py
src/pyfabricops/: __init__.py  _auth.py  _capacities.py  _connections.py  _core.py  _data_pipelines.py  _dataflows_gen1.py  _decorators.py  _endpoint_templates.py  _folders.py  _gateways.py  _generic_endpoints.py  _git.py  _items.py  _lakehouses.py  _logging.py  _notebooks.py  _reports.py  _semantic_models.py  _utils.py  _workspaces.py  cli.py
src/pyfabricops/api/: api.py  auth.py  scopes.py
src/pyfabricops/cd/: support_files.py
src/pyfabricops/cicd/: _semantic_models.py  _workspaces.py  data_pipelines.py  dataflows_gen1.py  dataflows_gen2.py  folders.py  items.py  (+6 more)
tests/: test_basic.py
(+51 files in other folders)
