[project]
name = "pyfabricops"
version = "0.5.4"
description = "A Python wrapper library for Microsoft Fabric and Power BI that provides a simple, consistent interface to the official Fabric REST APIs, with automatic fallback to Power BI REST APIs when required. Designed to run in Fabric notebooks, pure Python scripts, or as part of YAML-based CI/CD workflows."
authors = [
    {name = "alisonpezzott",email = "alisonpezzott@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Framework :: IPython",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "azure-identity==1.16.0",
    "pandas>=2.3.0,<3.0.0",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
]

[project.optional-dependencies]
dmv = [
    "pyadomd>=0.1.1",
    "pythonnet>=3.0.0",
]
gateway = [
    "cryptography>=3.4.8,<47.0.0",
]
json5 = [
    "json5==0.9.28",
]
all = [
    "pyfabricops[dmv,gateway,json5]",
]

[project.urls]
Repository = "https://github.com/alisonpezzott/pyfabricops.git"
Docs = "https://pyfabricops.readthedocs.io/en/latest/"
Issues = "https://github.com/alisonpezzott/pyfabricops/issues"
Examples = "https://github.com/alisonpezzott/pyfabricops-examples.git"

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "ruff>=0.11.0",
    "ipykernel>=6.29.5,<7.0.0",
    "twine>=6.1.0,<7.0.0",
]
docs = [
    "mkdocs-material>=9.6.15,<10.0.0",
    "mkdocstrings>=0.29.1,<0.30.0",
    "mkdocstrings-python>=1.16.12,<2.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfabricops"]

[tool.pytest.ini.options]
python = "."
addopts = "--doctest-modules"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B023", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["pyfabricops"]
